--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>O.</title>
+      <title>米如峰 memmrf 个人中心，网站首页</title>
 
       <!-- Meta & Info -->
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="theme-color" content="#2196f3">
-      <meta name="author" content="viosey">
-      <meta name="description" content="Homepage for your browser">
-      <meta name="keywords" content="Homepage 上网首页">
+      <meta name="author" content="vio米如峰sey">
+      <meta name="description" content="米如峰 memmrf 个人中心，网站首页">
+      <meta name="keywords" content="米如峰 memmrf mi.rufeng 个人介绍">
 
       <!--iOS -->
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
