--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta http-equiv="X-UA-Compatible">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="theme-color" content="#2196f3">
-      <meta name="author" content="vio米如峰sey">
+      <meta name="author" content="米如峰">
       <meta name="description" content="米如峰 memmrf 个人中心，网站首页">
       <meta name="keywords" content="米如峰 memmrf mi.rufeng 个人介绍">
 
