--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="theme-color" content="#2196f3">
       <meta name="author" content="米如峰">
-      <meta name="description" content="米如峰 memmrf 个人中心，网站首页">
+      <meta name="description" content="memmrf home page">
       <meta name="keywords" content="米如峰 memmrf mi.rufeng 个人介绍">
 
       <!--iOS -->
