--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>米如峰 memmrf 个人中心，网站首页</title>
+      <title>memmrf home page</title>
 
       <!-- Meta & Info -->
       <meta charset="utf-8">
