经常使用的网站链接修改

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>memmrf home page</title>
+      <title>个人上网主页</title>
 
       <!-- Meta & Info -->
       <meta charset="utf-8">
@@ -10,7 +10,7 @@
       <meta name="theme-color" content="#2196f3">
       <meta name="author" content="米如峰">
       <meta name="description" content="memmrf home page">
-      <meta name="keywords" content="米如峰 memmrf mi.rufeng 个人介绍">
+      <meta name="keywords" content="米如峰 memmrf上网首页">
 
       <!--iOS -->
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -24,10 +24,10 @@
       <meta name="mobile-web-app-capable" content="yes">
 
       <!-- The Open Graph protocol -->
-      <meta property="og:url" content="https://o.viosey.com">
-      <meta property="og:type" content="website">
-      <meta property="og:title" content="O.">
-      <meta property="og:description" content="Homepage for your browser">
+      <!--<meta property="og:url" content="https://o.viosey.com">-->
+      <!--<meta property="og:type" content="website">-->
+      <!--<meta property="og:title" content="O.">-->
+      <!--<meta property="og:description" content="Homepage for your browser">-->
 
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
